
        }
-- becomes:
    if (block == 0){
        _setcolor(White);
        _rectangle(RectStyle::OUTLINE, left, top, right, bottom);
    }else{
        _setcolor(DarkGreen);
        _rectangle(RectStyle::FILL, left, top, right, bottom);
    }

Revision 2: 
- create a translation table for palette index -> rgba value. (allows me to use the original code without manually memorizing which number is what color)
- set up game loop for continual rendering instead of only drawing when there's keyboard input
- clean up the movement code:
--- move it to a function to give it a name: "updateViewPoint"
--- replace magical literals, simplify expressions, etc. as per above.
--- create a private ViewPoint type, make it a member and replace the local x/z/angle with this member. (enables further refactorings, as we can now break the 143 line function into constituent parts)
+ There's a crashing bug with the y-intersection going out of range, causing us to read out-of-bounds on the map and crashing. Temporary clamp the y-intersection value and come back later to debug the math.

Revision 3: 
- clean the RayCaster
--- replace magical literals, simplify expressions, etc. as per above. 
--- unhoist 31 stack variables - place them near first use, and update their type appropriately. (64bit OS, don't need to use long...)
- separate movement code and collision code in "updateViewPoint" by moving the collision stuff to "checkCollisions"
- separate movement code and view port-clearing code in "updateViewPoint", by moving the render calls to "clearViewPort". 
--- also: give names to all coordinates used for drawing the viewport.
- simplify checkCollision with a "bool isWall(x, y)"-helper function
- add utily "clamp" to get rid of repeated if/else statements

Revision 4: 
- add utilities "wrap" to get rid of repeated if/else statements
- (declare and calculate currently implicit hard-coded settings: resolution, FOV, ray count etc)