@@ -3,6 +3,11 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+#allow the library folders
+!lib/
+!lib/x64/
+!lib/x86/
+
 # User-specific files
 *.rsuser
 *.suo
